--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
   },
   "dependencies": {
     "@kinde-oss/kinde-auth-nextjs": "^2.1.13",
+    "@vercel/postgres": "^0.7.2",
+    "drizzle-orm": "^0.29.4",
     "next": "14.1.0",
+    "postgres": "^3.4.3",
     "react": "^18",
     "react-dom": "^18"
   },
@@ -19,6 +22,7 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
+    "drizzle-kit": "^0.20.14",
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
     "postcss": "^8",
