--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "migration:generate": "drizzle-kit generate:pg --schema=./src/db/schema.ts",
+    "migration:push": "drizzle-kit push:pg",
+    "migrate": "drizzle-kit generate:pg --schema=./src/db/schema.ts && drizzle-kit push:pg"
   },
   "dependencies": {
     "@kinde-oss/kinde-auth-nextjs": "^2.1.13",
@@ -34,6 +37,7 @@
     "autoprefixer": "^10.0.1",
     "dotenv": "^16.4.5",
     "drizzle-kit": "^0.20.14",
+    "esbuild-register": "^3.5.0",
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
     "postcss": "^8",
