--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "@kinde-oss/kinde-auth-nextjs": "^2.1.13",
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-slot": "^1.0.2",
     "@vercel/postgres": "^0.7.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "drizzle-orm": "^0.29.4",
+    "framer-motion": "^11.0.6",
     "lucide-react": "^0.341.0",
     "next": "14.1.0",
     "pg": "^8.11.3",
