--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "migrate": "drizzle-kit generate:pg --schema=./src/db/schema.ts && drizzle-kit push:pg"
   },
   "dependencies": {
+    "@dotenvx/dotenvx": "^0.27.1",
     "@kinde-oss/kinde-auth-nextjs": "^2.1.13",
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-icons": "^1.3.0",
@@ -22,6 +23,7 @@
     "@tsparticles/engine": "^3.3.0",
     "@tsparticles/react": "^3.0.0",
     "@tsparticles/slim": "^3.3.0",
+    "@vercel/analytics": "^1.2.2",
     "@vercel/postgres": "^0.7.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
