--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "@kinde-oss/kinde-auth-nextjs": "^2.1.13",
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-progress": "^1.0.3",
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-toast": "^1.1.5",
+    "@sanity/client": "^6.15.11",
     "@tsparticles/engine": "^3.3.0",
     "@tsparticles/react": "^3.0.0",
     "@tsparticles/slim": "^3.3.0",
@@ -28,6 +30,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "drizzle-orm": "^0.29.4",
+    "firebase-admin": "^12.0.0",
     "framer-motion": "^11.0.6",
     "lucide-react": "^0.341.0",
     "next": "14.1.0",
