--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@tsparticles/slim": "^3.3.0",
     "@vercel/analytics": "^1.2.2",
     "@vercel/postgres": "^0.7.2",
+    "chalk": "^5.3.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "drizzle-orm": "^0.29.4",
