--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@dotenvx/dotenvx": "^0.27.1",
     "@kinde-oss/kinde-auth-nextjs": "^2.1.13",
     "@radix-ui/react-avatar": "^1.0.4",
+    "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-progress": "^1.0.3",
