--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "drizzle-orm": "^0.29.4",
+    "firebase": "^10.11.0",
     "firebase-admin": "^12.0.0",
     "framer-motion": "^11.0.6",
     "lucide-react": "^0.341.0",
