--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "postgres": "^3.4.3",
     "react": "^18",
     "react-dom": "^18",
+    "react-instantsearch": "^7.7.2",
     "spinners-react": "^1.0.7",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7"
